@@ -6380,6 +6380,15 @@ module OpenGLExt
   end # self.get_ext_command_GL_NV_polygon_mode
 
 
+  def self.define_ext_command_GL_NV_primitive_shading_rate
+  end # self.define_ext_command_GL_NV_primitive_shading_rate
+
+  def self.get_ext_command_GL_NV_primitive_shading_rate
+    [
+    ]
+  end # self.get_ext_command_GL_NV_primitive_shading_rate
+
+
   def self.define_ext_command_GL_NV_read_buffer
     OpenGL::GL_FUNCTIONS_ARGS_MAP[:glReadBufferNV] = [-Fiddle::TYPE_INT]
     OpenGL::GL_FUNCTIONS_RETVAL_MAP[:glReadBufferNV] = Fiddle::TYPE_VOID
