@@ -1,3 +1,8 @@
+2020-12-20  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* sample/glfw_build.sh: Modified to build x86_64 and arm64 universal binary for Apple Silicon macOS.
+	* Updated using latest gl.xml.
+
 2020-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated using latest gl.xml.
